--- a/index.html
+++ b/index.html
@@ -6,10 +6,171 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- font awasom -->
+    <script src="https://kit.fontawesome.com/d64052140c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>banglades</h1>
+    <!-- header start -->
+    <header>
+
+    </header>
+    <!-- header end -->
+    <!-- main section start -->
+    <main class="main-section">
+        <!-- 1st section start -->
+        <section class="container">
+            <h2 class="player-title">Top Player</h2>
+            <div class="top-player">
+                <div class="players">
+                    <div class="player"><img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">player 1</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">player 2</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">player 3</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">player 4</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">player 5</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">player 6</h3>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blog">
+                <h2 class="player-title">Top Player</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-1.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3>13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-2.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3>13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-3.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3>13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-4.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3>13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- 1st section end -->
+
+        <!-- 2nd section start -->
+        <section class="container">
+            <h1 class="section-title">letest courses</h1>
+            <div class="forses">
+                <div class="courses">
+                    <div class="course">
+                        <div class="corses-banner">
+                            <img src="images/courses/course-1.png" alt="">
+                        </div>
+                        <div class="course-details">
+                            <h3>React - The Complete Guide 2020 </h3>
+                            <p class="course-author">Reed Krakoff.</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i>
+                                    <span>4.5</span>
+                                </div>
+
+                                <div class="courses-duration">
+                                    <i class="far fa-clock"></i>
+                                    01.30hr
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="courses">
+                    <div class="course">
+                        <div class="corses-banner">
+                            <img src="images/courses/course-2.png" alt="">
+                        </div>
+                        <div class="course-details">
+                            <h3>React - The Complete Guide 2020 </h3>
+                            <p class="course-author">Reed Krakoff.</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i>
+                                    <span>4.5</span>
+                                </div>
+
+                                <div class="courses-duration">
+                                    <i class="far fa-clock"></i>
+                                    01.30hr
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="courses">
+                    <div class="course">
+                        <div class="corses-banner">
+                            <img src="images/courses/course-3.png" alt="">
+                        </div>
+                        <div class="course-details">
+                            <h3>React - The Complete Guide 2020 </h3>
+                            <p class="course-author">Reed Krakoff.</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i>
+                                    <span>4.5</span>
+                                </div>
+
+                                <div class="courses-duration">
+                                    <i class="far fa-clock"></i>
+                                    01.30hr
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
+    <!-- main section end -->
+
 </body>
 
 </html>
